test/functions/diten/typeFnWithLoop.good
typeFnWithLoop.chpl:9: error: type function may only contain parameter statements
